--- a/Denial-Of-Service.html
+++ b/Denial-Of-Service.html
@@ -26,6 +26,11 @@ These attacks send many requests to something and this break the website, many r
 </p>
 
 <h2>Computer Zombies and Botnets</h2>
+<p>To do more serious attacks most attackers infect people with malware without them knowing making them a zombie to their DOS attacks.
+    By doing this the malware they infect them with is able to use their computer and use it during their DDOS attacks. This causes and enourmous amount of traffic to appear thus breaking the website.
+    People also have created BotNets which essentianly are just bots that keep pumping traffic out onto a network or website thus making the host or server go down.
+    There are some counter-measures to these attacks, but for the most part these attacks can't be avoided even with a honey pot.
+</p>
 
 <style>body {
     background-image: url('https://www.backtrack-linux.org/images/background.png');
